# portal

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml  rust-toolchain.toml  schema.graphql  webhooks.json
.cargo/: config.toml
.github/workflows/: deploy.yml  lint.yml
.sqlx/: query-0738365da8af10d10bf54d250be9ef379f1db686aa40c839876f778abfd7e32a.json  query-08a0c2327cc2f58304dc3869fe45f1c702a0bb9b79d8aa733035b741b7bfd2df.json  query-0bf16f6f725f8f3ca1cf40184bcef8c83e9d42a109fd8c39384dc8b476c090e7.json  query-0fe817a5b2467424391ddee9e404bd481e0c0c5acdd0a78578fef502bf8243b0.json  query-11cf4ea35dabdb41af7f4fb123e7f37c4f9a34cb76451c5ba1305885efa81795.json  query-1ebed314e344a4fe9783b0d2ba106f52ba8ed575e1a33c9e8d4222f400dafe6f.json  query-20be25b289b663c66c46a110a7dbd28e65b4990e52d790bb3a6ff7e445fa0597.json  query-36fa653afd346c5624c68cee6a38383a827519789bb9fca05e228e8abda002bb.json  query-49b6f458bfa1ddfeb5935da1cbb0cd49f5677de2d195d53529e83f83d7f570e8.json  query-4ab57868dd2e5e22d74bc27331e7c9f0a0e0632191c7786fea8eca0ff2d35233.json  query-5627523bd7085a5666b9f2c33136b89e74a5e46a275b12fa905897176965fc38.json  query-5ceec9b0ae6bf3a8eba0910a9121d84af6ac2e3ffa965ac9b2aaa1f25d2e7c49.json  query-62909ba6fa2d76f6180a0be826782655086c93a7eafd6ebd1ca8922c9ad6207d.json  query-65dcb39a6b052cb7c1032b329ef517467bbe9967ee4523f85e66e7330c4d03ea.json  query-6ce3e1dc4208af90d20c44999eab597dd14005922a22568ad109485d8bae8b10.json  query-6f6f5c5da7088697c23a4256dd70463d19cabd143fc15f49ba8d8b33a136d472.json  query-704421f01780055161233c744f6cfe293e42aaf14b40bb7979ae5e51a4ec36d1.json  query-81e5e73375bca04fe8bd720ac8fd241fca418b3150c36f2fcc315807f03b685d.json  query-830f14e2eb7bbc5a3d4ca6e562462f08ad8c26b8f20271e0573250c5ee798ab0.json  query-84e157ffd3e2978000cec0460016b0fde8add3b4b0b4fd32b4559d13f3ac3267.json  query-890a2516667e9c033bdbd560d13c5f699bf3b666796877954f6018c521076fb5.json  query-8ae1b630e83c236d8ed660099226ed2802a03c3decd0c5b5c67197a0e5641f4b.json  query-8f7c9f8adc9f15c03f1f2e42c92f06b2510906efad774856c322e92b7867b480.json  query-92501bb4d0de30b357c0fdd19a2f575db55e09a81d87b4a4640301ffb59913cb.json  query-9338c5f79cb6b6f8dffd5925a91fd52ac1a275e3e1de7814b3b99515887979ae.json  query-9922da621941fdea325760d5fe79215f654c418970cd7bd3df90d097addd6467.json  query-9df461c421a530641d39bff0d450de809498801f1fe0dba448bccbc62ecc06ef.json  query-a8aea4ec81653d523b5022d8603b510ded80d3e23e7808fb6eb0b91e572285cf.json  query-b06ebb1e7d50d1b77a88b6b4061159bf5ab8ba2bc173dbb30d49b57ebb5f5bbc.json  query-bafe765f07ee99876db8c75f474b0f8827862644ab5888b95871ae54459dcede.json  query-c013877975576442cf58bdabf628a025d6cce18115e1d9eab61185bbd1c719b4.json  query-cc7f88f073c1ca8f9daf46d6b0015b707ee7beeefc92049f26ffeac4cb0ae015.json  query-dbe04e37eee133d7adf29731f3bb3c571bcbaf49ed9ff434be386f5b9c9a035f.json  query-debf88c3963d5ab68476b0d7230b6293d7bcf80cf8ec3766b73c532201a5be80.json  query-f0b070c794c4ebd4ab69a0421ecb2804c1ebd46516ff4073f70f0cda69e34d0b.json  query-f6d39d8c76f1d0bc648eb03bca71b641a0f5536e95d8f357f0b3c7c5155307f4.json
database/: Cargo.toml
database/src/: application.rs  check_in.rs  draft_application.rs  email.rs  lib.rs  macros.rs  school.rs  stubs.rs
graphql/: Cargo.toml
graphql/src/: errors.rs  lib.rs  query.rs  webhooks.rs
graphql/src/mutation/: application.rs  check_in.rs  draft_application.rs  mod.rs
mail/: Cargo.toml
mail/src/: lib.rs
migrations/: 20240511235051_setup_triggers.down.sql  20240511235051_setup_triggers.up.sql  20240511235130_create_applications_table.down.sql  20240511235130_create_applications_table.up.sql  20240513191951_create_draft_applications_table.down.sql  20240513191951_create_draft_applications_table.up.sql  20240601045445_make_draft_application_share_information_and_links_non-null.down.sql  20240601045445_make_draft_application_share_information_and_links_non-null.up.sql  20240601141047_replace_applications_links_and_draft_applications_links_with_individual_columns.down.sql  20240601141047_replace_applications_links_and_draft_applications_links_with_individual_columns.up.sql  20240603143740_add_referrer_column_to_draft_applications_and_applications.down.sql  20240603143740_add_referrer_column_to_draft_applications_and_applications.up.sql  20240604032341_create_schools_table.up.sql  20240604052728_add_school_id_to_draft_applications_and_applications_tables.down.sql  20240604052728_add_school_id_to_draft_applications_and_applications_tables.up.sql  20240618003630_add_vietnamese_to_race_ethnicity.down.sql  20240618003630_add_vietnamese_to_race_ethnicity.up.sql  20240618150144_create_check_ins_table.up.sql  20240620155108_create_emails_table.up.sql
src/: handlers.rs  lib.rs  main.rs  state.rs
src/handlers/: webhooks.rs
xtask/: Cargo.toml
xtask/src/: export_schema.rs  main.rs  migrate.rs  webhooks.rs
xtask/src/webhooks/: examples.rs  openapi.rs
