[package]
name = "portal"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre.workspace = true
dotenvy.workspace = true
eyre.workspace = true
tokio = { workspace = true, features = ["macros", "net", "signal"] }

[profile.release]
panic = "abort"

[workspace.dependencies]
color-eyre = "0.6"
dotenvy = "0.15"
eyre = "0.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
