[package]
name = "portal"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
color-eyre.workspace = true
database.workspace = true
dotenvy.workspace = true
eyre.workspace = true
logging = { workspace = true, features = ["opentelemetry"] }
tokio = { workspace = true, features = ["macros", "net", "signal"] }
tracing.workspace = true

[profile.release]
panic = "abort"

[workspace]
members = ["database"]

[workspace.dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
chrono = "0.4"
color-eyre = "0.6"
dotenvy = "0.15"
eyre = "0.6"
logging = { version = "0.3", registry = "wafflehacks" }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }

database = { path = "./database" }
