[package]
name = "portal"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true, features = ["playground"] }
async-graphql-axum = "7.0"
axum = { version = "0.7", default-features = false, features = ["http1", "http2", "json", "query", "tokio"] }
clap.workspace = true
color-eyre.workspace = true
context = { workspace = true, features = ["axum"] }
database.workspace = true
dotenvy.workspace = true
eyre.workspace = true
graphql.workspace = true
logging = { workspace = true, features = ["http", "opentelemetry"] }
tokio = { workspace = true, features = ["macros", "net", "signal"] }
tracing.workspace = true

[profile.release]
panic = "abort"

[workspace]
members = ["database", "graphql", "xtask"]

[workspace.dependencies]
async-graphql = { version = "7.0", features = ["chrono"], default-features = false }
clap = { version = "4.4", features = ["derive", "env"] }
chrono = "0.4"
color-eyre = "0.6"
context = { version = "0.5", registry = "wafflehacks" }
dotenvy = "0.15"
eyre = "0.6"
logging = { version = "0.3", registry = "wafflehacks" }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }

database = { path = "./database" }
graphql = { path = "./graphql" }
