[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true, features = ["dataloader"], optional = true }
chrono.workspace = true
context = { workspace = true, features = ["graphql"], optional = true }
eyre.workspace = true
sqlx = { workspace = true, features = ["chrono", "macros", "uuid"] }
tracing.workspace = true
tokio = { workspace = true, optional = true }
uuid = "1.8"

[features]
default = []
graphql = ["async-graphql", "context", "tokio"]
