[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql.workspace = true
chrono.workspace = true
context = { workspace = true, features = ["graphql"] }
database = { workspace = true, features = ["graphql"] }
logging = { workspace = true, features = ["graphql"] }
mail.workspace = true
schemars = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
svix.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[features]
default = []
schema = ["schemars"]
