[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
color-eyre.workspace = true
database.workspace = true
dotenvy.workspace = true
eyre.workspace = true
graphql.workspace = true
logging.workspace = true
migrator = { version = "0.2", registry = "wafflehacks" }
sqlx = { workspace = true, features = ["migrate"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing.workspace = true
