[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
clap.workspace = true
color-eyre.workspace = true
database = { workspace = true, features = ["schema"] }
dotenvy.workspace = true
eyre.workspace = true
graphql = { workspace = true, features = ["schema"] }
logging.workspace = true
migrator = { version = "0.2", registry = "wafflehacks" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing.workspace = true
uuid.workspace = true
